adding user manual (not finished)

--- a/report/User Manual/main.tex
+++ b/report/User Manual/main.tex
@@ -43,7 +43,24 @@
 \label{sec:intro}	
 \input{intro.tex}
 
-\section{Requisitos de software}
+\section{Instalación}
+\subsection{Requisitos de software}
 \label{sec:soft}	
 \input{soft.tex}
+
+\subsection{Requisitos de Hardware}
+\label{sec:hard}	
+\input{hard.tex}
+
+\subsection{Requisitos de instalación}
+\label{sec:install}	
+\input{install.tex}
+
+\section{Configuración}
+\label{sec:config}
+\input{config.tex}
+
+\section{Forma de uso}
+\label{sec:uso}
+\input{uso.tex}
 \end{document}
