--- a/report/User Manual/soft.tex
+++ b/report/User Manual/soft.tex
@@ -1,2 +1,12 @@
-El juego se probó en distintos sistemas operativos linux, de los cuales se destacan \emph{deepin 15.5 64bits} y \emph{Ubuntu 16.04 64bits}. Como requisito para poder compilar el cliente, servidor y el editor se encuentra:
+El juego se probó en distintos sistemas operativos linux, de los cuales se destacan \emph{deepin 15.5 64bits} y \emph{Ubuntu 16.04 64bits}. Como requisitos para poder compilar el cliente, servidor y el editor se encuentran:
+
+\begin{itemize}
+	\item SDL2
+	\item SDL2 image
+	\item SDL2 ttf
+	\item SDL2 mixer
+	\item Qt-5
+\end{itemize}
+
+Además, se utilizan las librerías \emph{Box2d} como motor físico del juego y \emph{jbeder-yaml-cpp} para las comunicaciones y la configuración del mismo, que se encuentran incluidas en la entrega.
 
