--- a/report/User Manual/config.tex
+++ b/report/User Manual/config.tex
@@ -1,3 +1,3 @@
 El juego es completamente configurable. Para esto, se requiere modificar el archivo de formato \emph{YAML}, que se encuentra en \texttt{/etc/Worms/serverConfig.yaml}. En este archivo se pueden modificar cuestiones físicas del juego ( velocidad de saltos, de caminar, fuerza del viento) como cuestiones del juego (tiempo de turnos, tiempo para mover el worm después de haber disparado, tiempo de espera hasta el siguiente turno, daño de las distintas armas, si las balas son afectadas por el viento, etc).
 
-Para configurar otros aspectos del juego, como lo puede ser el mapa, las municiones de cada arma o la vida de los gusanos, se puede utilizar el editor.
+Para configurar otros aspectos, como lo puede ser el mapa, las municiones de cada arma o la vida de los gusanos, se puede utilizar el editor.
