User manual and basic Project manual.

--- a/report/Project Manual/informacionAlumnos.tex
+++ b/report/Project Manual/informacionAlumnos.tex
@@ -2,7 +2,7 @@
 \newcommand{\codMateria}{96.08}
 \newcommand{\nombreMateria}{Taller de programación 1}
 \newcommand{\cuatrimestre}{1$^{er}$ Cuatrimestre de 2018}
-\newcommand{\titulo}{Manual de usuario}
+\newcommand{\titulo}{Manual del proyecto}
 \newcommand{\grupo}{Grupo 2}
 %-----------------------INFORMACIÓN DE MATERIA--------------------------------%
 
