--- a/report/Technical documentation/servidor.tex
+++ b/report/Technical documentation/servidor.tex
@@ -67,6 +67,31 @@ Se describen ahora las clases utilizadas en el servidor.
 		\item \textbf{\textit{Teleported}}.
 		\item \textbf{\textit{Batting}}.
 	\end{itemize}
+
+	\item \textbf{\textit{Bullet}}: hereda de \textit{PhysicsEntity} y cuando se construye crea el cuerpo de la bala, que es un círculo de un radio determinado. En el método \textit{startContact} se setea un \textit{flag} que se utiliza para determinar si explotó en el método \textit{hasExploded} (que también chequea si impactó en el agua o si se terminó la cuenta atrás en caso de que la bala posea la propiedad de \textit{timeout}). En el método \textit{update}, si se ejecuta por primera vez se aplica el impulso a la bala proporcionalmente a la potencia de disparo y en la dirección en la que apuntaba el gusano. Luego se aplica la fuerza del viento hasta que explota, que es cuando se notifica al \textit{Game} que explotó, y se destruye el cuerpo.
+
+	\item \textbf{\textit{Weapon}}: es una clase abstracta que encapsula el comportamiento de las armas. Las clases que heredan de esta se construyen en base a una estructura de configuración, el \textit{id} del arma correspondiente y el ángulo en el que está apuntando el gusano (que luego será alterado por los métodos \textit{increaseAngle} y \textit{decreaseAngle}). El método \textit{onExplode} hace lo que necesario cuando la bala disparada hizo impacto, es decir genera fragmentos a partir de esta si el arma así lo requiere y el método \textit{checkBoundaryAngles} evita que los ángulos en que el jugador apunta superen los máximos y mínimos establecidos. El método \textit{positionSelected} se utiliza para lanzar el ataque aéreo, y el método \textit{startShot} setea un \textit{flag} para indicar que debe acumularse potencia de tiro si el arma posee esta habilidad. En el método \textit{update} se acumula dicha potencia en función del tiempo transcurrido, la máxima potencia establecida y el tiempo estipulado para alcanzarla, y cuando es alcanzada, si el jugador aún no disparó, el disparo se realiza automáticamente. Las clases de armas que heredan de esta son:
+	\begin{itemize}
+		\item \textbf{\textit{AerialAttack}}.
+		\item \textbf{\textit{Banana}}.
+		\item \textbf{\textit{BaseballBat}}.
+		\item \textbf{\textit{Bazooka}}.
+		\item \textbf{\textit{Cluster}}.
+		\item \textbf{\textit{Dynamite}}.
+		\item \textbf{\textit{Grenade}}.
+		\item \textbf{\textit{Holy}}.
+		\item \textbf{\textit{Mortar}}.
+		\item \textbf{\textit{Teleport}}.
+		\item \textbf{\textit{WeaponNone}}.
+	\end{itemize}
 	
 	\item \textbf{\textit{Player}}: hereda de \textit{PhysicsEntity}. Se construye creando un cuerpo con las dimensiones de un gusano, añadiéndole un \textit{TouchSensor} (el gusano está compuesto por un rectángulo en su parte superior y un círculo en su parte inferior). Los métodos \textit{contactWith}, \textit{isOnGround} y \textit{getGroundNormal} manejan la lógica necesaria para que los gusanos no se empujen entre sí, no puedan desplazarse por vigas con inclinación superior a $45º$ (se deslicen por ellas si están cayendo), y puedan hacerlo por aquellas con pendiente menor o igual a $45º$. Tiene sobrecargados los operadores $==$ y $!=$ para compararlo como entidad física. Posee un \textit{PlayerState}, que maneja la lógica de cómo responder ante los \textit{inputs} que llegan del cliente, los cuales se procesan mediante \textit{handleState}, y posee un \textit{Weapon}, el cual se utiliza para delegar los métodos \textit{increaseAngle}, \textit{decreaseAngle} y \textit{startShot}. Al momento de realizar el disparo, se ejecuta el método \textit{endShot}, el cual crea la bala y la dispara, avisándole al equipo del gusano que dispone de un proyectil menos del arma usada. El método \textit{acknoledgeDamage} calcula el daño sufrido por el gusano y el impulso que debe aplicársele de acuerdo a su posición y la de la explosión, y \textit{landDamage}, determina si el gusano sufrió algún daño al caer, en base a la altura de la caída. El método \textit{die} mata al gusano (se da cunado un jugador se desconecta), \textit{reset} elimina las balas que haya y reincia el arma. Finalmente, \textit{onExplode} devuelve los fragmentos de bala si corresponde, y \textit{update} actualiza el estado, el arma, y realiza chequeos sobre la pendiente sobre la cual está el gusano y si está por debajo del nivel de agua (se está ahogando).
+	
+	\item \textbf{\textit{Wind}}: es una estructura que posee la información del viento (intensidad, mínima y máxima intensidad, y dirección en el eje x).
+	
+	\item \textbf{\textit{Config::Weapon}}: es una estructura en el \textit{namespace Config} (aclarado ya que en otro \textit{namespace} hay otra clase de igual nombre) que posee toda la información de configuración que necesitan las armas.
+	
+	\item \textbf{\textit{P2PWeapon}}: es una estructura que posee la información de las armas cuerpo a cuerpo (daño que ocasiona, dirección y ángulo en que se la utilizó, y posición al momento de utilizarla).
+	
+	\item \textbf{\textit{Config}}: clase que carga todos los parámetros configurables del juego de su archivo de configuración.
 \end{itemize}
