--- a/report/Technical documentation/main.tex
+++ b/report/Technical documentation/main.tex
@@ -14,6 +14,7 @@
 \usepackage{rotating}
 \usepackage{epstopdf}
 \usepackage{xcolor}
+\usepackage{ulem}
 \definecolor{commentgreen}{RGB}{2,112,10}
 \definecolor{eminence}{RGB}{108,48,130}
 \definecolor{weborange}{RGB}{255,165,0}
@@ -55,7 +56,6 @@
 \section{Servidor}
 \label{sec:servidor}	
 \input{servidor.tex}
-
 \section{Editor}
 
 \end{document}
